--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fast-vite-nestjs-electron",
   "version": "0.0.1",
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "pnpm@9.15.2",
   "description": "Vite + Electron with Doubleshot, so fast! ⚡",
   "main": "dist/main/index.js",
   "scripts": {
@@ -13,10 +13,11 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@doubleshot/builder": "^0.0.11",
     "@doubleshot/nest-electron": "^0.2.5",
-    "@nestjs/common": "^11.0.0",
-    "@nestjs/core": "^11.0.0",
-    "@nestjs/microservices": "^11.0.0",
+    "@nestjs/common": "^10.4.13",
+    "@nestjs/core": "^10.4.13",
+    "@nestjs/microservices": "^10.4.13",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "vue": "^3.5.13"
@@ -25,15 +26,14 @@
     "@lightwing/eslint-config": "^1.0.93",
     "@vitejs/plugin-vue": "5.2.1",
     "@vue/compiler-sfc": "3.5.13",
-    "electron": "34.0.1",
+    "electron": "33.2.1",
     "electron-builder": "25.1.8",
-    "eslint": "9.18.0",
-    "lint-staged": "15.4.2",
+    "eslint": "9.17.0",
+    "lint-staged": "15.3.0",
     "rimraf": "6.0.1",
     "simple-git-hooks": "2.11.1",
-    "typescript": "5.7.3",
-    "vite": "6.0.11",
-    "vite-plugin-doubleshot": "0.0.17",
+    "typescript": "5.7.2",
+    "vite": "6.0.7",
     "vue-tsc": "2.2.0"
   },
   "simple-git-hooks": {
